--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,6 @@
 <div class="wrapper">
     <app-header></app-header>
     <!-- this should be outer outlet -->
-    <app-home>
-        <div class="container">
-            <span class="content-title">Lorem Ipsum Heading</span>
-            <span class="content-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis culpa accusamus quisquam, voluptates esse praesentium velit dolore magni eaque rem soluta dignissimos eum, ad voluptas molestias odio voluptate voluptatem, architecto hic recusandae error. A veritatis, eius beatae voluptatibus quam officiis quidem. Inventore 
-            at culpa accusantium ea odio vitae dolor minus.</span>
-        </div>
-        <app-more-info></app-more-info>
-    </app-home>
+    <router-outlet></router-outlet>
     <app-footer></app-footer>   
 </div>
