--- a/src/app/component/disclaimer/disclaimer.component.html
+++ b/src/app/component/disclaimer/disclaimer.component.html
@@ -1,14 +1,14 @@
 <div class="wrapper">
   <div class="disclaimer">
-  <span class="disclaimer-title">
-    RISK WARNING / WARNING
-  </span>
-  <span class="disclaimer-content">
-    FX(Forex) / CFD (contracts for difference) trading carries a high element of risk and may not be 
-    suitable  for all investors. Losses can exceed deposited funds. Please seek independent advise to 
-    ensure you fully understand the risk element of trading FX and CFDs. Past performance 
-    are indicative only and not represantative of future resutls. Tradingsights Limited or any of its associated 
-    partners cannot be held responsible for any adverse outcomes.
-  </span>
-</div>
+    <span class="disclaimer-title">
+      RISK WARNING / DISCLAIMER
+    </span>
+    <span class="disclaimer-content">
+      FX(Forex) / CFD (contracts for difference) trading carries a high element of risk and may not be 
+      suitable  for all investors. Losses can exceed deposited funds. Please seek independent advise to 
+      ensure you fully understand the risk element of trading FX and CFDs. Past performance 
+      are indicative only and not represantative of future resutls. Tradingsights Limited or any of its associated 
+      partners cannot be held responsible for any adverse outcomes.
+    </span>
+  </div>
 </div>
