--- a/src/app/component/disclaimer/disclaimer.component.scss
+++ b/src/app/component/disclaimer/disclaimer.component.scss
@@ -14,7 +14,7 @@
         display: inline-block;
     }
     .disclaimer-title {
-        padding: 40px 0 30px;
+        padding: 0 0 30px;
         font-weight: 700;   
     }
 }
