--- a/src/app/component/shared/footer/footer.component.html
+++ b/src/app/component/shared/footer/footer.component.html
@@ -1,6 +1,30 @@
 <footer>
 <div class="footer">
-    TESTING
+    <div class="footer-contents">
+        <div class="logo">
+            <a class="navbar-brand" href="#"> <img src="" alt=""/>2RING</a>
+        </div>
+        <div class="footer-contacts">
+            <p><span class="code-contact">T</span><span>020 7444 5555</span></p>
+            <p><span class="code-contact">E</span><span>info@tradinsights.com</span></p>
+            <p><span class="code-contact">A</span><span>85 Great Portland Street</span></p>
+            <p>London</p>
+            <p>W1W 7LT</p>
+        </div>
+        <div class="footer-maps">
+            <p>PAGE TITLE</p>
+            <p><a href="">HOME</a></p>
+            <p><a href="">ABOUT</a></p>
+            <p><a href="">FAQS</a></p>
+            <p><a href="">CONTACT</a></p>
+        </div>
+        <div class="newsletter">
+            <p>NEWSLETTER SIGN UP</p>
+            <input type="text" class="newsletter"/> 
+            <button class="btn btn-primary">SUBMIT</button>
+            <app-social-media></app-social-media>
+        </div>
+    </div>
 </div>
 <app-trademark-footer></app-trademark-footer>
 </footer>
