--- a/src/app/component/myservices/myservices.component.html
+++ b/src/app/component/myservices/myservices.component.html
@@ -8,5 +8,5 @@
     <p class="content-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis culpa accusamus quisquam, voluptates esse praesentium velit dolore magni eaque rem soluta dignissimos eum, ad voluptas molestias odio voluptate voluptatem, architecto hic recusandae error. A veritatis, eius beatae voluptatibus quam officiis quidem. Inventore 
                     at culpa accusantium ea odio vitae dolor minus.</p>
 </div>
-<app-more-info></app-more-info>
+<app-register></app-register>
 <app-disclaimer></app-disclaimer>
