--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -14,11 +14,12 @@
       <div class="collapse navbar-collapse" [collapse]=isCollapsed>
           <div class=" navbar-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">HOME</a></li>
-                <li><a href="#">SERVICES</a></li>
+                <li class="active"><a routerLink="home">HOME</a></li>
+                <li><a  routerLink="services">SERVICES</a></li>
                 <li><a href="#">FAQS</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
+            <app-social-media class="nav navbar-nav"></app-social-media>
           </div>
       </div>
     </div><!-- /.container-fluid -->
