--- a/src/app/component/shared/header/header.component.scss
+++ b/src/app/component/shared/header/header.component.scss
@@ -1,4 +1,7 @@
 @import "../../../../sass/variables";
+header {
+    padding: 0 30px;
+}
 .navbar {
     min-height: 90px;
     margin-bottom: 0;   
@@ -6,7 +9,6 @@
 header,
 .navbar {
     background-color: $background-color;
-
 }
 .navbar-nav {
     li {
@@ -16,12 +18,20 @@ header,
             letter-spacing: 1px;
             padding-top: 40px;
             padding-bottom: 5px;
+            background-color: $background-color;
         }
     }
+    li:hover {
+        background-color: $background-color;
+    } 
     
-    > li a:hover {
+    li a:hover {
         color: $text-hover-color;
         background-color: $background-color;
         border-bottom: 3px solid $text-hover-color;
     }
+}
+app-social-media {
+    display: block;
+    padding-top: 38px;
 }
