--- a/src/app/component/shared/more-info/more-info.component.scss
+++ b/src/app/component/shared/more-info/more-info.component.scss
@@ -17,7 +17,7 @@
     .content-title {
         font-size: 24px;
         color: $text-hover-color;
-        border-bottom: 3px solid #D3D3D3;
+        border-bottom: 2px solid #D3D3D3;
         padding-bottom: 10px;
     }
     .content-text {
@@ -31,5 +31,9 @@
     background-color: $text-hover-color;
     border-radius: 0;
     padding: 15px 40px;
+    border-color: $text-hover-color;
+}
+.btn-primary:hover {
+    background-color: $background-color;
     border-color: $text-hover-color;
 }
