--- a/src/app/component/shared/trademark-footer/trademark-footer.component.scss
+++ b/src/app/component/shared/trademark-footer/trademark-footer.component.scss
@@ -2,4 +2,9 @@
 
 .trademark-footer {
     background-color: $text-hover-color;
+    p {
+        padding: 20px 45px;
+        color: $background-color;
+        font-weight: 700;
+    }
 }
