--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -9,4 +9,7 @@
                     at culpa accusantium ea odio vitae dolor minus.</p>
 </div>
 <app-more-info></app-more-info>
+<agm-map [latitude]="lat" [longitude]="lng">
+        <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>
 <app-disclaimer></app-disclaimer>
