--- a/src/app/component/myservices/myservices.component.html
+++ b/src/app/component/myservices/myservices.component.html
@@ -1,6 +1,6 @@
 <app-hero-image></app-hero-image>
 <div class="container">
-    <span class="content-title">Lorem Ipsum Heading</span>
+    <span class="content-title">Heading to go here</span>
     <p class="content-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis culpa accusamus quisquam, voluptates esse praesentium velit dolore magni eaque rem soluta dignissimos eum, ad voluptas molestias odio voluptate voluptatem, architecto hic recusandae error. A veritatis, eius beatae voluptatibus quam officiis quidem. Inventore 
     at culpa accusantium ea odio vitae dolor minus.</p>
     <p class="content-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis culpa accusamus quisquam, voluptates esse praesentium velit dolore magni eaque rem soluta dignissimos eum, ad voluptas molestias odio voluptate voluptatem, architecto hic recusandae error. A veritatis, eius beatae voluptatibus quam officiis quidem. Inventore 
