--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -17,7 +17,7 @@
                 <li class="active"><a routerLink="home">HOME</a></li>
                 <li><a  routerLink="services">SERVICES</a></li>
                 <li><a href="#">FAQS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact">CONTACT</a></li>
             </ul>
             <app-social-media class="nav navbar-nav"></app-social-media>
           </div>
