--- a/src/app/component/contacts/contacts.component.html
+++ b/src/app/component/contacts/contacts.component.html
@@ -1,11 +1,22 @@
+<div class="contact-us">
+    <div class="contact-box">
+        <span>Contact Us</span>
+        <div class="footer-contacts">
+            <p><span class="code-contact">T</span><span>020 7444 5555</span></p>
+            <p><span class="code-contact">E</span><span>info@tradinsights.com</span></p>
+            <p><span class="code-contact">A</span><span>85 Great Portland Street</span></p>
+            <p>London</p>
+            <p>W1W 7LT</p>
+        </div>
+    </div>
+    <app-google-map></app-google-map>
+</div>
 
-<app-google-map></app-google-map>
 <app-register></app-register>
 <div class="container">
   <div class="cotnact">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatem velit repellendus placeat sed. Ratione mollitia nihil amet repellendus itaque fugit atque neque nesciunt minus sint natus a ipsum ullam, explicabo animi, facilis, dolores sed fuga? Ducimus, exercitationem nihil, ullam laboriosam, fuga culpa enim cumque porro nobis optio quaerat sunt ipsa natus. Perferendis magnam explicabo ipsa architecto quas, soluta rerum excepturi quo illo blanditiis amet ratione natus, adipisci vitae molestias. Consectetur ipsa hic molestias reiciendis id blanditiis, qui ducimus accusantium quasi voluptatum doloribus deserunt vel iusto. Recusandae, vitae molestias. Dolor libero, at modi
     quidem officiis ullam voluptatibus quis perferendis ipsam.</p>
-  
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatem velit repellendus placeat sed. Ratione mollitia nihil amet repellendus itaque fugit atque neque nesciunt minus sint natus a ipsum ullam, explicabo animi, facilis, dolores sed fuga? Ducimus, exercitationem nihil, ullam laboriosam, fuga culpa enim cumque porro nobis optio quaerat sunt ipsa natus. Perferendis magnam explicabo ipsa architecto quas, soluta rerum excepturi quo illo blanditiis amet ratione natus, adipisci vitae molestias. Consectetur ipsa hic molestias reiciendis id blanditiis, qui ducimus accusantium quasi voluptatum doloribus deserunt vel iusto. Recusandae, vitae molestias. Dolor libero, at modi
         quidem officiis ullam voluptatibus quis perferendis ipsam.</p>
     </div>
