--- a/src/app/component/shared/footer/footer.component.html
+++ b/src/app/component/shared/footer/footer.component.html
@@ -1,8 +1,9 @@
 <footer>
 <div class="footer">
     <div class="footer-contents">
-        <div class="logo">
-            <a class="navbar-brand" href="#"> <img src="" alt=""/>2RING</a>
+        <div class="logo">   
+            <a class="logo-brand" href="#">
+                <img src="../../../../assets/logo-brand.png" alt="" title="ngMarketing"/></a>
         </div>
         <div class="footer-contacts">
             <p><span class="code-contact">T</span><span>020 7444 5555</span></p>
