--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -9,14 +9,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">2RING</a>
+        <a class="navbar-brand" href="#">
+          <img src="../../../../assets/logo-brand.png" alt="" title="ngMarketing"/></a>
       </div>
       <div class="collapse navbar-collapse" [collapse]=isCollapsed>
           <div class=" navbar-right">
             <ul class="nav navbar-nav">
                 <li class="active"><a routerLink="home">HOME</a></li>
                 <li><a  routerLink="services">SERVICES</a></li>
-                <li><a href="#">FAQS</a></li>
+                <li><a href="faq">FAQS</a></li>
                 <li><a href="contact">CONTACT</a></li>
             </ul>
             <app-social-media class="nav navbar-nav"></app-social-media>
