--- a/src/app/component/shared/register/register.component.html
+++ b/src/app/component/shared/register/register.component.html
@@ -1,6 +1,9 @@
 <div class="register">
   <div class="register-content">
       <span>REGISTER HERE</span>
+      <div class="divider">
+        <span></span>
+      </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque nulla accusantium quasi recusandae ea architecto iusto explicabo tenetur! Soluta non, error quia dignissimos 
         expedita dolorem laboriosam officiis tempore voluptates.</p>
       <button class="btn btn-primary">REGISTER</button>
