--- a/src/app/component/shared/header/header.component.scss
+++ b/src/app/component/shared/header/header.component.scss
@@ -1,15 +1,20 @@
 @import "../../../../sass/variables";
 header {
     padding: 0 30px;
+    a.navbar-brand {
+        height: 0;
+        padding: 20px 0;
+    }
 }
 .navbar {
-    min-height: 90px;
+    min-height: 110px;
     margin-bottom: 0;   
 }
 header,
 .navbar {
     background-color: $background-color;
 }
+
 .navbar-nav {
     li {
         padding-right: 35px;
