--- a/src/app/component/shared/register/register.component.scss
+++ b/src/app/component/shared/register/register.component.scss
@@ -9,8 +9,16 @@
             color: $text-hover-color;
             font-size: 14px;
             font-weight: 700;
-            border-bottom: 3px solid #fff;
             padding-bottom: 10px;
+        }
+        .divider {
+            display: flex;
+            justify-content: center;
+            span {
+                width: 170px;
+                display: block;
+                border-bottom: 3px solid #fff;
+            }
         }
         p {
             margin: 20px 0;
