--- a/src/app/component/contacts/contacts.component.html
+++ b/src/app/component/contacts/contacts.component.html
@@ -1,13 +1,21 @@
 <div class="contact-us">
     <div class="contact-box">
         <span>Contact Us</span>
-        <div class="footer-contacts">
+        <div class="trading-contacts">
             <p><span class="code-contact">T</span><span>020 7444 5555</span></p>
             <p><span class="code-contact">E</span><span>info@tradinsights.com</span></p>
             <p><span class="code-contact">A</span><span>85 Great Portland Street</span></p>
             <p>London</p>
             <p>W1W 7LT</p>
         </div>
+        <app-social-media></app-social-media>
+        <p>Fill out contact form content here</p>
+        <!-- <form class="contact-us" name="contact-us">
+            <input type="text" placeholder="Full Name"/>
+            <input type="text" placeholder="Telephone No"/>
+            <input type="text" placeholder="Email Address"/>
+            <textarea cols="50" rows="10" placeholder="Message"></textarea>
+        </form> -->
     </div>
     <app-google-map></app-google-map>
 </div>
