--- a/src/app/component/shared/footer/footer.component.scss
+++ b/src/app/component/shared/footer/footer.component.scss
@@ -66,6 +66,9 @@
             border-style: none;
         }
     }
+    app-social-media {
+        text-align: right;
+    }
 }
 app-social-media {
     display: block;
